style.css
html{
    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
}

body{
    background-color: rgb(150, 40, 0);
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

#enjoy{
    display:flex;
    align-self:flex-start;
    padding-left: 42px;
}

p{
    color:rgb(0, 0, 109);
    font-style:italic;
    font-family:Georgia, 'Times New Roman', Times, serif;
    font-weight:950;
    font-size: 32px;
    margin-top: -6px;
    margin-bottom: -6px;
}

#calculator-body{
    margin-top: 94px;
    padding-top: 20px;
    display: flex;
    flex: 1;
    flex-direction: column;
    align-items: center;
    border: 10px solid;
    border-image-slice: 1;
    border-width: 5px;
    border-image-source: linear-gradient(to left, #743ad5, #d53a9d);
    background: linear-gradient(65deg, black, white);
    height: 800px;
    width: 600px;
}

#display{
    margin-top: 48px;
    background: linear-gradient(
        to bottom,
        rgb(1, 170, 153),
        rgb(195, 255, 225),
        rgb(28, 231, 214)
      );

    border: 10px solid;
    border-image-slice: 1;
    border-width: 5px;
    border-image-source: linear-gradient(to left, #743ad5, #d53a9d);
    text-justify: center;
    margin: 16px;
    padding-left: 8px;
    font-size: 52px;
    width: 500px;
    height: 64px;
}

#operator-container{
    display:flex;
    flex: 1;
    margin: 16px;
}

.operator-key{
    font-size: 52px;
}

#number-container{
    justify-content: center;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    flex: 1;
    margin: 16px;
}

.num-key{
    font-size: 96px;
    height: 120px;
    width: 92px;
}

#del-clear{
    display: flex;
}

#delete, #clear{
    flex-grow: 1;
    margin-bottom: 32px;
}

button {
    cursor: pointer;
    font-size: 64px;
    margin: 2px;
    position: relative;
    z-index: 1; /* matters! */
    background: linear-gradient(
      to bottom,
      rgb(255, 244, 182),
      orange
    );
  }

  button::before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: linear-gradient(
      to bottom,
      orangered,
      purple
    );
    opacity: 0;
    transition: opacity 0.2s;
    z-index: -1;
  }
  button:hover::before {
    opacity: 1;
  }


footer{
    margin-top: 24px;
}

